@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0 ]---------------
 
+2005-01-05  Erik Grinaker <erikg@codepoet.no>
+
+	* rewrote the netrc datahandler, and wrote unit tests for it
+
+
 2005-01-04  Erik Grinaker <erikg@codepoet.no>
 
 	* don't subclass gnome.ui.HRef (abstract widget from
